@@ -1,3 +1,10 @@
+2006-03-09  Chenthill Palanisamy  <pchenthill@novell.com>
+
+	Fixes #334003
+	* gui/e-cal-model.c: 
+	(e_cal_model_set_instance_times): Use the timezone present in
+	the appointment.
+
 2006-03-06  Veerapuram Varadhan  <vvaradhan@novell.com>
 
 	**Fixes #321832
